fix(security): checkout RBAC, race condition, setup guard, dashboard null org
C-1: Add TenantAccessService.requireAssignmentWriteAccess/ReadAccess to
     CheckoutService — VIEWER and AUDITOR can no longer perform checkouts.

C-2: Replace in-memory active-checkout filter with
     findActiveByAssetIdAndOrganizationIdForUpdate (SELECT FOR UPDATE) to
     prevent double-checkin race conditions under concurrent requests.

C-3: POST /setup fast-path rejects with 409 before acquiring the advisory
     lock when the system is already configured.

H-1: Add AssetRepository.updateStatusAndAssignedUser() — replaces the
     fragile full-record reconstruction in checkout/checkin.

H-3: DashboardQueryService returns empty stats (all zeros) for SUPER_ADMIN
     callers without an organization context instead of sending NULL to
     all repository queries.

L-3: Use Stream.toList() (Java 21) instead of Collectors.toList().
L-6: Add V33 partial unique index on asset_checkouts (asset_id)
     WHERE checked_in_at IS NULL — database-level guard against duplicate
     active checkouts.
L-1: Fix application description (remove 'scaffold' wording).
L-2: Remove hardcoded '1.1.0' default from SystemInfoController — uses
     info.app.version from yml (single source of truth).